# localmind-ai

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-export.txt  requirements.txt
app/: __init__.py  config.py  main.py
app/agent/: graph.py  nodes.py  prompts.py
app/models/: schemas.py  state.py
app/services/: embedding_service.py  llm_service.py  retrieval_service.py
app/utils/: logging.py
data/documents/: machine_learning.md  onnx_directml.md
scripts/: build_index.py  export_model.py
